--- a/HTML/221118/HTML_Test3_221118.html
+++ b/HTML/221118/HTML_Test3_221118.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <table>
-        <thead style="background-color :yellow; width: 50px;">
+        <thead style="background-color :yellow;">
             <tr>
                 <td rowspan="2">통화</td>
                 <td rowspan="2">매매<br>기준율</td>
