--- a/Javascript/실습문제객체배열.html
+++ b/Javascript/실습문제객체배열.html
@@ -147,7 +147,7 @@
             students.forEach((student,index) =>{
                 studentTb.innerHTML += 
                 `<tr>
-                    <td>${index+1}</td>
+                    <td>${index}</td>
                     <td>${student.name}</td>
                     <td>${student.java}</td>
                     <td>${student.oracle}</td>
